--- a/assets/package.json
+++ b/assets/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "css": "^2.2.4",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "picnic": "^6.5.2"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
