--- a/assets/package.json
+++ b/assets/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "admin-lte": "^3.0.2",
+    "jquery": "^3.4.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "semantic-ui-css": "^2.4.1"
