--- a/assets/package.json
+++ b/assets/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.4.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
     "semantic-ui-css": "^2.4.1"
   },
   "devDependencies": {
