--- a/assets/package.json
+++ b/assets/package.json
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "admin-lte": "^3.0.2",
+    "fomantic-ui-css": "^2.8.4",
     "jquery": "^3.4.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "semantic-ui-css": "^2.4.1"
+    "phoenix_live_view": "file:../deps/phoenix_live_view"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
